force-app/main/default/objects/Society_Member__c/Society_Member__c.object-meta.xml
<CustomObject>
    <label>Society Membership</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Society Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Society Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>