force-app/main/default/objects/Society_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Society Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Society_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>