force-app/main/default/objects/Society_Member__c/fields/DeactivateAfterMerging__c.field-meta.xml
<CustomField>
    <fullName>DeactivateAfterMerging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeactivateAfterMerging</label>
    <type>Checkbox</type>
</CustomField>