force-app/main/default/objects/Society_Member__c/fields/Membership_Status_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status_Confirmed__c</fullName>
    <label>Membership Status Confirmed</label>
    <type>DateTime</type>
</CustomField>