force-app/main/default/objects/Society_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Officer</fullName>
            </value>
            <value>
                <fullName>Assistant Editor</fullName>
            </value>
            <value>
                <fullName>Associate member society - Delegate</fullName>
            </value>
            <value>
                <fullName>Collaborating Society</fullName>
            </value>
            <value>
                <fullName>Congress Manager</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Individual Delegate</fullName>
            </value>
            <value>
                <fullName>Institutional Delegate</fullName>
            </value>
            <value>
                <fullName>Managing Editor</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Member at large</fullName>
            </value>
            <value>
                <fullName>Member no Benefit</fullName>
            </value>
            <value>
                <fullName>Panel Member (Institution)</fullName>
            </value>
            <value>
                <fullName>Past president</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>President Elect</fullName>
            </value>
            <value>
                <fullName>RRFS National Society Delegate</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Secretary general</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Vice president</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Chief Executive Director = Ex. Director</fullName>
            </value>
            <value>
                <fullName>Chair EQTF</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
                <isActive>false</isActive>
                <label>Participant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>