force-app/main/default/objects/Society_Member__c/fields/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <label>Society</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>National Neurological Society</value>
        </filterItems>
        <filterItems>
            <field>Society__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>National Neurological Society</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Societies</value>
        </filterItems>
        <filterItems>
            <field>Society__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Society</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Society__c</referenceTo>
    <relationshipName>Society_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>