force-app/main/default/objects/Society_Member__c/fields/tx_efnsusr_group_id__c.field-meta.xml
<CustomField>
    <fullName>tx_efnsusr_group_id__c</fullName>
    <label>tx_efnsusr_group_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>