force-app/main/default/objects/Society_Member__c/recordTypes/National_Neurological_Society.recordType-meta.xml
<RecordType>
    <fullName>National_Neurological_Society</fullName>
    <active>true</active>
    <label>National Neurological Society</label>
</RecordType>