force-app/main/default/objects/Society_Member__c/recordTypes/Partner_Societies.recordType-meta.xml
<RecordType>
    <fullName>Partner_Societies</fullName>
    <active>true</active>
    <label>Partner Societies</label>
</RecordType>