force-app/main/default/objects/Society_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Membership_Status_Confirmed__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All non-deleted Society Members</label>
</ListView>