force-app/main/default/objects/Society_Member__c/listViews/Inactive_after_merge.listView-meta.xml
<ListView>
    <fullName>Inactive_after_merge</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Society__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeactivateAfterMerging__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Inactive after merge</label>
</ListView>