force-app/main/default/objects/Society_Member__c/listViews/National_Neurology_Society_Members.listView-meta.xml
<ListView>
    <fullName>National_Neurology_Society_Members</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Membership_Status_Confirmed__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Society_Member__c.National_Neurological_Society</value>
    </filters>
    <label>National Neurology Society Members</label>
</ListView>