force-app/main/default/objects/Society_Member__c/listViews/Slovenian_Society.listView-meta.xml
<ListView>
    <fullName>Slovenian_Society</fullName>
    <columns>Society__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Membership_Status_Confirmed__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Society__c</field>
        <operation>contains</operation>
        <value>Slovenian</value>
    </filters>
    <label>Slovenian Society</label>
</ListView>